<resources>
    <string name="app_name">Jdc Students</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Course Name</string>
    <string name="course_duration">Course Duration</string>
    <string name="fees_of_course">Fees of Course</string>
    <string name="descriptions">Descriptions</string>
    <string name="save_course">Save Course</string>
    <string name="edit">Edit</string>
    <string name="_2020_10_10">2020/10/10</string>
    <string name="course_description_text">Course Description Text</string>
    <string name="sat_sun">SAT - SUN</string>
    <string name="_200_000_mmk">200,000 MMK</string>
    <string name="_13_00_15_00">13:00 - 15:00</string>
    <string name="add_registration">Add Registration</string>
    <string name="class_icon">Class Icon</string>
    <string name="fees">Fees</string>
    <string name="select_course">Select Course</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_days">Enter Days</string>
    <string name="enter_times">Enter Times</string>
    <string name="save_class">Save Class</string>
    <string name="add_new_course">Add New Course</string>
    <string name="course_edit_cover_image">Course Edit Cover Image</string>
    <string name="about_course">About Course</string>
    <string name="about_registration">About Registration</string>
    <string name="about_student">About Student</string>
    <string name="about_class">About Class</string>
</resources>
