<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.jdc.students.ui.converter.DoubleConverter" alias="dConv" />
        <import type="com.jdc.students.ui.converter.IntegerConverter" alias="iConv" />
        <variable
            name="model"
            type="com.jdc.students.ui.model.CourseEditModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/AppTheme.Main.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{model.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/course_edit_cover_image"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/ic_courses" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleImage">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={model.data.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fees"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={dConv.doubleToString(model.data.duration)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_duration" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="@+id/duration"
            app:layout_constraintStart_toStartOf="@+id/duration"
            app:layout_constraintTop_toBottomOf="@+id/duration">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={iConv.intToString(model.data.fees)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fees_of_course" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/saveBtn"
            app:layout_constraintEnd_toEndOf="@+id/fees"
            app:layout_constraintStart_toStartOf="@+id/fees"
            app:layout_constraintTop_toBottomOf="@+id/fees">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={model.data.description}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptions" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveBtn"
            android:onClick="@{model::save}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_course"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>